location object working, sort of, next on the Weather obj