@@ -1,30 +1,40 @@
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
 import com.fasterxml.jackson.annotation.PropertyAccessor;
 import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.HashMap;
 
-public class APICalls {
+public class WeatherAPI {
     private static HashMap<String,String> calls;
     private String APIKEY;
+    private String IP;
+    private JsonNode Node;
 
-    public APICalls() {
+    public JsonNode getNode() {
+        return Node;
+    }
+
+    public WeatherAPI() {
         calls = new HashMap<>();
         calls.put("IPLocation","/locations/v1/cities/ipaddress");
         calls.put("currentConditions","/currentconditions/v1/");
         try {
             setAPIKey();
+            setIP();
+            this.Node = setLocation();
         } catch (Exception e) {
             e.printStackTrace();
         }
-        try {
-            setLocation();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+
     }
 
     public HashMap<String,String> getCalls() {
@@ -38,7 +48,11 @@ public class APICalls {
         }
     }
 
-    private void setLocation() throws IOException {
+    public String getIP() {
+        return IP;
+    }
+
+    public JsonNode setLocation() throws IOException {
 
         // API Call:
        // "http://dataservice.accuweather.com/locations/v1/cities/ipaddress?apikey=[key]&q=188.25.249.171"
@@ -47,16 +61,26 @@ public class APICalls {
         objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES,false);
         objectMapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
 
-        Location location = new Location();
 
         StringBuffer endpoint = new StringBuffer("http://dataservice.accuweather.com"); // compose URL endpoint
         endpoint.append(calls.get("IPLocation"));
         endpoint.append("?apikey=");
         endpoint.append(APIKEY);
         endpoint.append("&q=");
-        endpoint.append(location.getIP());
+        endpoint.append(this.IP);
 
-        location = objectMapper.readValue(new URL(endpoint.toString()),Location.class);
+        JsonNode node = objectMapper.readTree(new URL(endpoint.toString()));
+
+        return node;
+
+    }
+
+    private void setIP() throws IOException,InterruptedException, URISyntaxException {
+        String URL = "http://icanhazip.com";
+        HttpClient client = HttpClient.newBuilder().followRedirects(HttpClient.Redirect.ALWAYS).build();
+        HttpRequest req = HttpRequest.newBuilder().uri(new URI(URL)).GET().build();
+        HttpResponse<String> resp = client.send(req, HttpResponse.BodyHandlers.ofString());
+        this.IP = resp.body().trim();
 
     }
 
